--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "python-shell": "^0.4.0",
     "querystring": "^0.2.0",
     "react": "^15.4.2",
+    "react-autosuggest": "^9.0.0",
     "react-dom": "^15.4.2",
     "react-s3-uploader": "^4.0.3",
     "socket.io": "^1.7.3",
