--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "querystring": "^0.2.0",
     "react": "^15.4.2",
     "react-autosuggest": "^9.0.0",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.4.2",
     "react-s3-uploader": "^4.0.3",
     "socket.io": "^1.7.3",
